[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2.0.4"
regex = "1.10.2"
log = "0.4.20"
itertools = { version = "0.12.0", features = [] }
num = "0.4.1"
memoize = "0.4.1"
bigdecimal = "0.4.2"
num-traits = "0.2.17"
graphrs = "0.7.0"
#z3 = "0.12"
